CREATE TABLE IF NOT EXISTS users (
  id SERIAL PRIMARY KEY,
  name VARCHAR(120) NOT NULL,
  email VARCHAR(160) UNIQUE NOT NULL,
  avatar_url TEXT,
  password_hash TEXT NOT NULL,
  role VARCHAR(20) NOT NULL DEFAULT 'user',
  created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS books (
  id SERIAL PRIMARY KEY,
  title VARCHAR(200) NOT NULL,
  title_en VARCHAR(200),
  author VARCHAR(160) NOT NULL,
  author_en VARCHAR(160),
  genre VARCHAR(120) NOT NULL,
  genre_en VARCHAR(120),
  description TEXT NOT NULL,
  description_en TEXT,
  publish_year INT NOT NULL,
  publisher VARCHAR(160) NOT NULL,
  publisher_en VARCHAR(160),
  book_language VARCHAR(80) NOT NULL,
  book_language_en VARCHAR(80),
  rating NUMERIC(2,1) NOT NULL DEFAULT 0,
  price_kzt NUMERIC(10,2) NOT NULL,
  cover_url TEXT NOT NULL,
  popularity INT NOT NULL DEFAULT 0,
  created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS favorites (
  id SERIAL PRIMARY KEY,
  user_id INT NOT NULL REFERENCES users(id) ON DELETE CASCADE,
  book_id INT NOT NULL REFERENCES books(id) ON DELETE CASCADE,
  UNIQUE(user_id, book_id)
);

CREATE TABLE IF NOT EXISTS cart_items (
  id SERIAL PRIMARY KEY,
  user_id INT NOT NULL REFERENCES users(id) ON DELETE CASCADE,
  book_id INT NOT NULL REFERENCES books(id) ON DELETE CASCADE,
  quantity INT NOT NULL DEFAULT 1,
  UNIQUE(user_id, book_id)
);

CREATE TABLE IF NOT EXISTS orders (
  id SERIAL PRIMARY KEY,
  user_id INT NOT NULL REFERENCES users(id) ON DELETE CASCADE,
  status VARCHAR(30) NOT NULL DEFAULT 'in_transit',
  delivery_city VARCHAR(120),
  delivery_address TEXT,
  payment_method VARCHAR(30),
  card_last4 VARCHAR(4),
  total_price NUMERIC(10,2) NOT NULL DEFAULT 0,
  created_at TIMESTAMP NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS order_items (
  id SERIAL PRIMARY KEY,
  order_id INT NOT NULL REFERENCES orders(id) ON DELETE CASCADE,
  book_id INT NOT NULL REFERENCES books(id) ON DELETE RESTRICT,
  quantity INT NOT NULL DEFAULT 1,
  price_kzt NUMERIC(10,2) NOT NULL
);
